<resources>
    <string name="app_name">Akademia Androida</string>
    <string name="label_first_tier_color">Kolor I rzędu</string>
    <string name="label_second_tier_color">Kolor II rzędu</string>
    <string name="label_third_tier_color">Kolor III rzędu</string>
    <string name="label_error_color">Kolor błędu</string>
    <string name="about_company_tab_layout">About</string>
    <string name="in_numbers_company_tab_layout">In numbers</string>
    <string name="in_numbers_founded">Founded</string>
    <string name="in_numbers_founded_year">2019</string>
    <string name="in_numbers_employes">Employes</string>
    <string name="in_numbers_employes_number">+60</string>
    <string name="in_numbers_deployments">Deployments</string>
    <string name="in_numbers_deployments_number">+20</string>
    <string name="in_numbers_min_project_size">Min. Project Size</string>
    <string name="in_numbers_min_project_size_amount">5000$</string>
    <string name="apply_now">Apply now</string>
    <string name="we_are_hiring">We\'re Hiring!</string>
    <string name="join_our_team">Join our team</string>
    <string name="do_you_want_to_install_app">Do you want to install the %s app?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="footer_text_down">Copyright 2023 SafetyHeads</string>
    <string name="footer_text_up">SafetyHeads.com - Privacy policy and Cookie policy</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="privacy_policy_url">https://safetyheads.com/android-academy</string>
    <string name="cookie_policy">Cookie policy</string>
    <string name="cookie_policy_url">https://safetyheads.com/contact-us</string>
    <string name="invalid_name_message">Incorrect name</string>
    <string name="invalid_surname_message">Incorrect surname</string>
    <string name="invalid_empty_message">This field is required</string>
    <string name="invalid_spaces_message">Too much spaces</string>
    <string name="invalid_password">Invalid password</string>
    <string name="invalid_phone_message">Invalid phone number</string>
    <string name="invalid_email">Invalid email</string>
    <string name="experience_structure_image">Experience Structure image</string>
    <string name="cd_arrow">Back Arrow</string>
    <string name="launch_screen_txt_sign_in">Sign in</string>
    <string name="launch_screen_txt_welcome">Welcome to SafetyHeads</string>
    <string name="launch_screen_txt_subtext">Create mobile and web apps for any screen</string>
    <string name="launch_screen_btn_get_started">Get started</string>
    <string name="launch_screen_txt_company_name">SafetyHeads</string>
    <string name="launch_screen_image_launch">launch screen image</string>
    <string name="contact_us_main_text">Contact us!\nWe’d love to hear from you</string>
    <string name="contact_us_email_text">contact@safetyheads.com</string>
    <string name="contact_us_phone_text"><u>+48 665 606 024</u></string>
    <string name="contact_us_company_text">SafetyHeads</string>
    <string name="contact_us_address_text">Plac Konstytucji 3 Maja\n50-048 Wrocław</string>
    <string name="contact_us_fill_form_button_text">Fill the contact form</string>
    <string name="contact_us_social_text">Check our Social Media</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mobile_apps_development">Mobile Apps Development</string>
    <string name="web_apps_development">Web Apps Development</string>
    <string name="low_code_development">Low-code Development</string>
    <string name="team_augmentation">Team Augmentation</string>
    <string name="project_team_leasing">Project Team Leasing</string>
    <string name="support_and_maintenance">Support and Maintenance</string>
    <string name="cybersecurity">CyberSecurity</string>
    <string name="it_audits">IT Audits</string>
    <string name="digital_transformation">Digital Transformation</string>
    <string name="ai_machine_learning_nlp">AI &amp; Machine Learning &amp; NLP</string>
    <string name="internet_of_things">Internet of Things</string>
    <string name="cloud_devops">Cloud &amp; DevOps</string>
    <string name="activities">activities</string>
    <string name="fragments">fragments</string>
    <string name="sign_up">Sign up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="full_name">Full name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="not_a_member">Not a member?</string>
    <string name="sign_up_now">Sign up now</string>
    <string name="sign_in">Sign in</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="forgot_password"> <u>Forgot password?</u> </string>
    <string name="dot_enumeration">•</string>
    <string name="job_offers">Job offers</string>
    <string name="we_are_waiting_for_you_check_out_our_open_positions_and_join_us">We are waiting for you! Check out our open positions and join us.</string>
    <string name="stay_up_to_date_with">Stay up to date with</string>
    <string name="our_job_offers">our job offers</string>
    <string name="see_the_offer">See the offer</string>
    <string name="forgot_password_without_underline">Forgot password?</string>
    <string name="forgot_password_text">Enter your e-mail address and we’ll send you a link to return to your account.</string>
    <string name="e_mail">E-mail</string>
    <string name="request_reset_link">Request reset link</string>
    <string name="or">Or</string>
    <string name="sign_in_now">Sign in now</string>
    <string name="we_have_emailed_your_password_reset_link">We have e-mailed your password reset link.</string>
    <string name="failed_sent_forgot_password">Failed sent e-mail. Please try again later</string>
    <string name="title_activity_web_view">WebViewActivity</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="arrow_notifications">Arrow notifications</string>
</resources>