<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingVertical="@dimen/padding_3x">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/in_numbers_founded"
        android:textColor="@color/s_60" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_1.5x"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/in_numbers_founded_year"
        android:textColor="@color/p_60" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/in_numbers_employes"
        android:textColor="@color/s_60" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_1.5x"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/in_numbers_employes_number"
        android:textColor="@color/p_60" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/in_numbers_deployments"
        android:textColor="@color/s_60" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_1.5x"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/in_numbers_deployments_number"
        android:textColor="@color/p_60" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/in_numbers_min_project_size"
        android:textColor="@color/s_60" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/in_numbers_min_project_size_amount"
        android:textColor="@color/p_60" />
</LinearLayout>