<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginFragment"
    android:layout_margin="@dimen/size_3x">

    <ImageView
        style="@style/Back_arrow"
        android:id="@+id/button_back"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        style="@style/Logo_safetyheads"
        android:id="@+id/imageView_logo_safetyheads"
        android:layout_width="128dp"
        android:layout_height="96dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="48dp"/>

    <TextView
        style="@style/Text2"
        android:id="@+id/textView_email_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="184dp"
        android:text="@string/email_address"
        android:textSize="10sp"
        android:textColor="@color/n_120"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Layout_eText_email_address"
        android:id="@+id/layout_email_address"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:paddingLeft="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="202dp">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/EText_email_address"
            android:id="@+id/eText_email_address"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        style="@style/Text2"
        android:id="@+id/textView_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="280dp"
        android:text="@string/password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Layout_eText_password"
        android:id="@+id/layout_password"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="296dp"
        app:endIconMode="password_toggle"
        android:paddingLeft="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/EText_password"
            android:id="@+id/eText_password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        style="@style/Text2_semibold"
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="344dp"
        android:text="@string/forgot_password"
        android:textColor="@color/n_120"
        android:fontFamily="@font/poppins_semibold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        style="@style/StyledButton"
        android:id="@+id/button_sign_up"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="448dp"
        android:text="@string/sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        style="@style/Text2"
        android:id="@+id/textView_not_a_member"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="504dp"
        android:layout_marginLeft="80dp"
        android:text="@string/not_a_member"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        style="@style/Poppins_regular_green_10sp"
        android:id="@+id/textView_sign_up_now"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="504dp"
        android:layout_marginRight="80dp"
        android:text="@string/sign_up_now"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>