<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".forgotpasswordfragment.ForgotPasswordFragment"
    android:layout_margin="@dimen/size_3x">

    <ImageView
        android:id="@+id/button_back"
        style="@style/Back_arrow"
        android:layout_width="24dp"
        android:layout_height="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/logo_safetyheads"
        style="@style/Logo_safetyheads"
        android:layout_width="128dp"
        android:layout_height="96dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_back"
        android:layout_marginTop="@dimen/size"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="@dimen/size"
        android:src="@drawable/h2_view_line_63dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_forgot_pass_text"
        app:layout_constraintEnd_toStartOf="@+id/tv_forgot_pass_text"
        app:layout_constraintTop_toTopOf="@+id/tv_forgot_pass" />

    <TextView
        android:id="@+id/tv_forgot_pass"
        style="@style/Text_comforta_bold_18sp"
        android:layout_marginStart="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_4x"
        android:textColor="@color/s_60"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_safetyheads"
        android:text="@string/forgot_password_without_underline" />

    <TextView
        android:id="@+id/tv_forgot_pass_text"
        style="@style/Poppins_regular_green_10sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_0.25x"
        android:layout_marginStart="10dp"
        android:text="@string/forgot_password_text"
        android:textColor="@color/n_120"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_forgot_pass" />


    <TextView
        android:id="@+id/email_address"
        style="@style/Text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_3x"
        android:text="@string/e_mail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_forgot_pass_text" />



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_eText_email_address"
        style="@style/Layout_eText_email_address"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="@dimen/size_0.25x"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_address">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/eText_email_address"
            style="@style/EText_email_address"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@null"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_sign_in"
        style="@style/StyledButton"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="@dimen/size_5x"
        android:text="@string/request_reset_link"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_eText_email_address"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_4x"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_sign_in">

        <TextView
            android:id="@+id/not_a_member"
            style="@style/Text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/sign_in_now"
            style="@style/Poppins_regular_green_10sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size"
            android:text="@string/sign_in_now"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintStart_toEndOf="@+id/not_a_member"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>