<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/s_60">


    <Button
        android:id="@+id/apply_now"
        style="@style/App_button"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="@dimen/size_3x"
        android:layout_marginTop="@dimen/size_4x"
        android:layout_marginEnd="@dimen/size_3x"
        android:text="@string/apply_now"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/size_4x"
        app:layout_constraintTop_toBottomOf="@+id/apply_now"
        app:srcCompat="@drawable/mask_group_20"
        android:scaleType="fitXY"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_5x"
        android:fontFamily="@font/comfortaa_bold"
        android:lineSpacingExtra="2sp"
        android:text="@string/join_our_team"
        android:textColor="@color/p_60"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/comfortaa_bold"
        android:lineSpacingExtra="3sp"
        android:text="@string/we_are_hiring"
        android:textColor="@color/n_0"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

</androidx.constraintlayout.widget.ConstraintLayout>