<?xml version="1.0" encoding="utf-8"?>
<!-- Default Landscape for phones-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/n_0"
    tools:context=".LaunchScreenActivity">

    <TextView
        android:id="@+id/txt_sign"
        style="@style/Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/poppins_regular"
        android:letterSpacing="0.04"
        android:text="@string/launch_screen_txt_sign_in"
        android:textColor="@color/s_60"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04000002" />

    <TextView
        android:id="@+id/txt_welcome"
        style="@style/H1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_6x"
        android:layout_marginEnd="@dimen/size_6x"
        android:letterSpacing="0.04"
        android:text="@string/launch_screen_txt_welcome"
        android:textAlignment="center"
        android:textColor="@color/s_60"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_sign"
        app:layout_constraintVertical_bias="1.0"
        app:lineHeight="20sp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="24dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/launch_screen_image_launch"
        android:maxHeight="250dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_welcome"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/launcher_image" />

    <TextView
        android:id="@+id/txt_message"
        style="@style/H3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="80dp"
        android:letterSpacing="0.04"
        android:text="@string/launch_screen_txt_subtext"
        android:textAlignment="center"
        android:textColor="@color/s_60"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:lineHeight="20sp" />

    <Button
        android:id="@+id/button"
        style="@style/App_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="64dp"
        android:enabled="true"
        android:gravity="center"
        android:padding="14dp"
        android:text="@string/launch_screen_btn_get_started"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_message"
        app:layout_constraintVertical_bias="0.88" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.17" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.66" />


</androidx.constraintlayout.widget.ConstraintLayout>