<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/n_60"
    tools:context="com.safetyheads.ContactUsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout_bottom"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/rounded_layout_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_min="500dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/imageView_at_sign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_3x"
            android:layout_marginTop="@dimen/size_3x"
            android:src="@tools:sample/avatars"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_main"
            app:srcCompat="@drawable/contact_us_at_sign" />

        <ImageView
            android:id="@+id/imageView_phone_symbol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_3x"
            android:layout_marginTop="@dimen/size_2x"
            android:src="@tools:sample/avatars"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView_at_sign"
            app:srcCompat="@drawable/contact_us_phone_symbol" />

        <ImageView
            android:id="@+id/imageView_pin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_3x"
            android:layout_marginTop="@dimen/size_2x"
            android:src="@tools:sample/avatars"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView_phone_symbol"
            app:srcCompat="@drawable/contact_us_pin" />

        <TextView
            android:id="@+id/textView_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_3x"
            android:layout_marginTop="@dimen/size_3x"
            android:background="@drawable/left_border_line"
            android:paddingStart="@dimen/size"
            android:paddingEnd="@dimen/size"
            android:text="@string/contact_us_main_text"
            android:textAppearance="@style/H2"
            android:textColor="@color/s_60"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView_email"
            style="@style/PoppinsRegular14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_2x"
            android:text="@string/contact_us_email_text"
            app:layout_constraintBottom_toBottomOf="@+id/imageView_at_sign"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/imageView_at_sign"
            app:layout_constraintTop_toTopOf="@+id/imageView_at_sign" />

        <TextView
            android:id="@+id/textView_phone"
            style="@style/PoppinsRegular14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_2x"
            android:text="@string/contact_us_phone_text"
            app:layout_constraintBottom_toBottomOf="@+id/imageView_phone_symbol"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/imageView_phone_symbol"
            app:layout_constraintTop_toTopOf="@+id/imageView_phone_symbol" />

        <TextView
            android:id="@+id/textView_company"
            style="@style/PoppinsSBold14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_2x"
            android:text="@string/contact_us_company_text"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageView_pin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/imageView_pin"
            app:layout_constraintTop_toTopOf="@+id/imageView_pin" />

        <TextView
            android:id="@+id/textView_address"
            style="@style/PoppinsRegular14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_0.5x"
            android:text="@string/contact_us_address_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView_company"
            app:layout_constraintTop_toBottomOf="@+id/textView_company" />

        <Button
            android:id="@+id/button_fill_form"
            style="@style/App_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size_3x"
            android:layout_marginTop="@dimen/size_4.75x"
            android:layout_marginRight="@dimen/size_3x"
            android:text="@string/contact_us_fill_form_button_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_address" />

        <TextView
            android:id="@+id/textView_social"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_3x"
            android:layout_marginTop="@dimen/size_9x"
            android:background="@drawable/left_border_line"
            android:paddingStart="@dimen/size"
            android:paddingEnd="@dimen/size"
            android:text="@string/contact_us_social_text"
            android:textAppearance="@style/H2"
            android:textColor="@color/s_60"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_fill_form" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>